force-app/main/default/objects/Work_Time__c/Work_Time__c.object-meta.xml
<CustomObject>
    <label>Work Time</label>
    <nameField>
        <displayFormat>WT-{000000}</displayFormat>
        <label>Work Time</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>