force-app/main/default/objects/Work_Time__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who recorded this work time</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Work Times</relationshipLabel>
    <relationshipName>Work_Times</relationshipName>
    <type>Lookup</type>
</CustomField>