force-app/main/default/objects/Work_Time__c/fields/Work_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Date__c</fullName>
    <description>Date of work</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Work Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>