force-app/main/default/objects/Work_Time__c/fields/Work_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Work_End_Time__c</fullName>
    <description>Work end time</description>
    <label>Work End Time</label>
    <type>Time</type>
</CustomField>