force-app/main/default/objects/Work_Time__c/fields/Work_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Work_Start_Time__c</fullName>
    <description>Work start time</description>
    <label>Work Start Time</label>
    <type>Time</type>
</CustomField>