force-app/main/default/objects/Work_Time__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Work_Date__c</columns>
    <columns>Work_Start_Time__c</columns>
    <columns>Work_End_Time__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>